2002-07-31  Glynn Foster  <glynn.foster@sun.com>

	* logview.c: s/About.../About. Fixes #89481.

2002-07-26  Deepa Natarajan  <deepa.natarajan@wipro.com>

	* log_repaint.c, logrtns.c, logview.h: When logview first 
	comes up set focus on the last row and scroll to that row. 
	Always maintain the last focused line. Fixes bug #87398.

2002-07-25  Deepa Natarajan  <deepa.natarajan@wipro.com>

	* logview.[ch], log_repaint.c: Maintain the correct status
	of expanded rows when switching between logs.
	Partly Fixes #87398.

2002-07-24  Deepa Natarajan  <deepa.natarajan@wipro.com>

	* actions.c: Pass the command to execute twice for execlp (),
	so that the action happens. Fixes bug# 88207.

2002-07-17  Deepa Natarajan  <deepa.natarajan@wipro.com>

	* logview.c: Add menu item Close All - to close all the log
	files in one shot.

2002-07-08  Laavanya K R <laavanya.gopalan@wipro.com>

	* actions.c: Modified exec_action_in_db() to execute "action"
	by a combination of fork() and execlp() calls instead of
	executing through system().  There is a potential of Time of
	Check and Time of Use (TOCTOU) issues with system() since
	shell is spawned first and command's executed after a small
	time gap. Fixes #87110.

2002-07-08  Deepa Natarajan  <deepa.natarajan@wipro.com> 
 
	* logview.[ch], log_repaint.c: Append filename to the window 
	title. Disable Close and Properties option when all files are
	closed. s/Log/File as logs are just files. 

2002-07-05  Glynn Foster  <glynn.foster@sun.com>

	* gnome-system-log.desktop.in: s/DocPath/X-GNOME-DocPath.
	Now conforms to spec.

2002-07-05  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am: Add install of schema
	* logview.schemas.in: Add schemas.
	* logview.c, logview.h, userprefsdialog.c: Get rid of old
	unused cruft that you could set to change the size of your 
	windows.

2002-07-02  Deepa Natarajan  <deepa.natarajan@wipro.com> 
 
	* logrtns.[ch], monitor.c: Rewrote ReadPageDown() and 