@@ -1,5 +1,12 @@
 2002-07-31  Glynn Foster  <glynn.foster@sun.com>
 
+	* logview.c: Remove StubCall ()
+	* logview.h: ditto
+	* menus.c: (AddMenu): Remove 'Save As' entry in the menus
+	as it's not used. Fixes #89483.
+
+2002-07-31  Glynn Foster  <glynn.foster@sun.com>
+
 	* logview.c: s/About.../About. Fixes #89481.
 
 2002-07-26  Deepa Natarajan  <deepa.natarajan@wipro.com>
